force-app/main/default/objects/Apttus_Approval__Global_Discount_Policy__c/Apttus_Approval__Global_Discount_Policy__c.object-meta.xml
<CustomObject>
    <description>Designates global discount policies for six levels of approvals</description>
    <label>Global Discount Policy</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global Discount Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>