force-app/main/default/objects/Apttus_Approval__Global_Discount_Policy__c/fields/Apttus_Approval__Authorized_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Authorized_Discount_Percent__c</fullName>
    <label>Authorized Discount Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>