force-app/main/default/objects/Apttus_Approval__Global_Discount_Policy__c/fields/Apttus_Approval__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>