force-app/main/default/objects/Apttus_Approval__Global_Discount_Policy__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Approval_Level__c</columns>
    <columns>Apttus_Approval__Description__c</columns>
    <columns>Apttus_Approval__Authorized_Discount_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>